Webview style cover all the screen now

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,5 +1,8 @@
 webview {
-  display: inline-flex;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
+  display: inline-flex !important;
 }
